--- a/app_server/views/generic-text.jade
+++ b/app_server/views/generic-text.jade
@@ -8,6 +8,6 @@ block content
   .row
     .col-md-6.col-sm-12
       p
-        | Loc8r was created to help people find places to sit down and get a bit of work done.
+        | WiFiDot was created to help people find places to sit down and get a bit of work done.
         | <br /><br />
-        | Loc8r 是一个帮助人们找到一个有wifi的地方，在这个地方人们可以完成一些紧急的工作。
+        | WiFiDot 是一个帮助人们找到一个有wifi的地方，在这个地方人们可以完成一些紧急的工作。
