--- a/app_server/views/location-info.jade
+++ b/app_server/views/location-info.jade
@@ -77,7 +77,7 @@ block content
                     .col-xs-12
                       p It was okay. Coffee wasn't great, but the wifi wa fast.
     .col-xs-12.col-md-3
-      p.lead Simon's cafe is on Loc8r because it has accessible wifi and spance to sit down with your laptop and get some work done.
+      p.lead Simon's cafe is on WiFiDot because it has accessible wifi and spance to sit down with your laptop and get some work done.
       p if you've been and you like it - or if you don't - please leave a review to help other people just like you.
 
 
