--- a/app_server/views/locations-list.jade
+++ b/app_server/views/locations-list.jade
@@ -4,7 +4,7 @@ block content
   #banner.page-header
     .row
       .col-lg-6
-        h1 Loc8r
+        h1 WiFiDot
          small &nbsp;Find places to work with wifi near you!
   .row
     .col-xs-12.col-sm-8
@@ -47,4 +47,4 @@ block content
             span.label.label-warning Premium wifi
             | &nbsp;
     .col-xs-12.col-sm-4
-      p.lead Looking for wifi and a seat? Loc8r helps you find places to work when out and about. Perhaps with coffee, cake or a pint? Let Loc8r help you find the place you're looking for.
+      p.lead Looking for wifi and a seat? WiFiDot helps you find places to work when out and about. Perhaps with coffee, cake or a pint? Let WiFiDot help you find the place you're looking for.
