move data from vies to the cotroller

--- a/app_server/views/generic-text.jade
+++ b/app_server/views/generic-text.jade
@@ -7,7 +7,4 @@ block content
         h1=title
   .row
     .col-md-6.col-sm-12
-      p
-        | WiFiDot was created to help people find places to sit down and get a bit of work done.
-        | <br /><br />
-        | WiFiDot 是一个帮助人们找到一个有wifi的地方，在这个地方人们可以完成一些紧急的工作。
+      p !{(content).replace(/\n/g,'<br/>')}
