--- a/app_server/views/location-info.jade
+++ b/app_server/views/location-info.jade
@@ -1,49 +1,45 @@
 extends layout
 
+include _includes/sharedHTMLfunctions
+
 block content
   .row.page-header
     .col-lg-12
-      h1 Starcups
+      h1= pageHeader.title
   .row
     .col-xs-12.col-md-9
       .row
         .col-xs-12.col-sm-6
           p.rating
-            span.glyphicon.glyphicon-star
-            span.glyphicon.glyphicon-star
-            span.glyphicon.glyphicon-star
-            span.glyphicon.glyphicon-star-empty
-            span.glyphicon.glyphicon-star-empty
-          p 125 High Street, Reading, RG6 1PS
+            +outputRating(location.rating)
+          p #{location.address}
           .panel.panel-primary
             .panel-heading
               h2.panel-title Opening hours
             .panel-body
-              p Monday - Friday : 7:00am - 7:00pm
-              p Saturday : 8:00am - 5:00pm
-              p Sunday : closed
+              each time in location.openingTimes
+                p 
+                  | #{time.days} :
+                  if time.closed
+                    | closed
+                  else
+                    | #{time.opening} - #{time.closing}
           .panel.panel-primary
             .panel-heading
               h2.panel-title Facilities
             .panel-body
-              span.label.label-warning
-                span.glyphicon.glyphicon-ok
-                | &nbsp;Hot drinks
-              | &nbsp;
-              span.label.label-warning
-                span.glyphicon.glyphicon-ok
-                | &nbsp;Food
-              | &nbsp;
-              span.label.label-warning
-                span.glyphicon.glyphicon-ok
-                | &nbsp;Premium wifi
-              | &nbsp;
+              each facility in location.facilities
+                span.label.label-warning
+                  span.glyphicon.glyphicon-ok
+                  | &nbsp;#{facility}
+                | &nbsp;
+              
         .col-xs-12.col-sm-6.location-map
           .panel.panel-primary
             .panel-heading
               h2.panel-title Location map
             .panel-body
-              img.img-responsive.img-rounded(src='http://maps.googleapis.com/maps/api/staticmap?center=51.455041,-0.9690884&zoom=17&size=400x350&sensor=false&makers=51.455041,-0.9690884&scale=2')
+              img.img-responsive.img-rounded(src='http://maps.googleapis.com/maps/api/staticmap?center=#{location.coords.lat},#{location.coords.lng}&zoom=17&size=400x350&sensor=false&makers=#{location.coords.lat},#{location.coords.lng}&scale=2')
       .row
         .col-xs-12
           .panel.panel-primary.review-panel
@@ -51,36 +47,19 @@ block content
               a.btn.btn-default.pull-right(href='/location/review/new') Add review
               h2.panel-title Customer reviews
             .panel-body.review-container
-              .row 
-                .review
-                  .well.well-sm.review-header
-                    span.rating
-                      span.glyphicon.glyphicon-star
-                      span.glyphicon.glyphicon-star
-                      span.glyphicon.glyphicon-star
-                      span.glyphicon.glyphicon-star
-                      span.glyphicon.glyphicon-star
-                    span.reviewAuthor Hyperbola
-                    small.reviewTimestamp 15 July 2015
-                  .col-xs-12
-                    p what a great place. I can't say enouth good things about it.
+              each review in location.reviews
+                .row 
                   .review
                     .well.well-sm.review-header
                       span.rating
-                        span.glyphicon.glyphicon-star
-                        span.glyphicon.glyphicon-star
-                        span.glyphicon.glyphicon-star
-                        span.glyphicon.glyphicon-star-empty
-                        span.glyphicon.glyphicon-star-empty
-                      span.reviewAuthor Lu sai
-                      small.reviewTimestamp 16 June 2015
+                        +outputRating(review.rating)
+                      span.reviewAuthor #{review.author}
+                      small.reviewTimestamp #{review.timestamp}
                     .col-xs-12
-                      p It was okay. Coffee wasn't great, but the wifi wa fast.
+                      p !{(review.reviewText).replace(/\n/g,'<br/>')}
     .col-xs-12.col-md-3
-      p.lead Simon's cafe is on WiFiDot because it has accessible wifi and spance to sit down with your laptop and get some work done.
-      p if you've been and you like it - or if you don't - please leave a review to help other people just like you.
-
-
+      p.lead #{location.name} #{sidebar.context}
+      p= sidebar.callToAction
 
 
 
