--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -25,7 +25,9 @@ html
         .row
           .col-xs-12
             small &copy; Hyperbola 2016
-
+    
+    script(src='/angular/angular.min.js')
+    script(src='/angular/wifidotApp.js')
     script(src='/javascripts/jquery.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
     script(src='/javascripts/validation.js')
