--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,3 +3,7 @@
 .review-header {margin-bottom: 10px;}
 .reviewAuthor {margin: 0 5px;}
 .reviewTimestamp {color: #ccc;}
+
+.label-facility { margin-left: 2px; }
+.rating-stars { margin-left: 3px; }
+#filter {margin-left: 4px;}
