--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -29,13 +29,14 @@ html(ng-app='wifidotApp')
   block scripts    
     script(src='/angular/angular.min.js')
     script(src='/lib/angular-route.min.js')
-    script(src='/angular/wifidotApp.js')
-    script(src='/app.js')
-    script(src='/home/home.controller.js')
-    script(src='/common/services/wifidotData.service.js')
-    script(src='/common/services/geolocation.service.js')
-    script(src='/common/directives/ratingStars/ratingStars.directive.js')
-    script(src='/common/filters/formatDistance.filter.js')
+    script(src='/angular/wifidot.min.js')
+    //-script(src='/angular/wifidotApp.js')
+    //- script(src='/app.js')
+    //- script(src='/home/home.controller.js')
+    //- script(src='/common/services/wifidotData.service.js')
+    //- script(src='/common/services/geolocation.service.js')
+    //- script(src='/common/directives/ratingStars/ratingStars.directive.js')
+    //-script(src='/common/filters/formatDistance.filter.js')
     script(src='/javascripts/jquery.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
     script(src='/javascripts/validation.js')
