--- a/public/bootstrap/css/amelia.bootstrap.css
+++ b/public/bootstrap/css/amelia.bootstrap.css
@@ -1,4 +1,7 @@
+
+/*@import url("font.googleapis.css");*/
 @import url("//fonts.googleapis.com/css?family=Lobster|Cabin:400,700");
+
 
 /*!
  * Bootstrap v3.0.0
